Add delete channel function

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,6 +40,13 @@
         >
 
         <Button
+            android:id="@+id/btn_delete_comment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Delete Comment Channel"
+            />
+
+        <Button
             android:id="@+id/btn_setting_message"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
